UI: All main drop-downs shown by default Alert if main file missing Added spinner to plot data Filters: Badges to show num of active filters Color coding Small bug fixes in count filter Layout of overlap filter
Other small UI and bug fixes

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,7 @@
   position: relative;
   z-index: 500;
   margin: 20px 230px 20px 230px;
-  transition: margin 0.7s cubic-bezier(0.175, 0.885, 0.32, 1);
+  transition: margin 1s cubic-bezier(0.175, 0.885, 0.32, 1);
 }
 
 .panel.active {
@@ -20,17 +20,6 @@
 th {
   text-align: center
 }
-/*td {
-  word-wrap: break-word;
-}*/
-/*table {
-  thead {
-    tr {
-      display: block;
-      position: relative;s
-    }
-  }
-}*/
 
 .col-centered{
   float: none;
@@ -53,11 +42,10 @@ th {
 }
 
 .filter-component {
-  border: 1px solid #999999;
+  border: 2px solid;
   border-radius: 10px;
-  background: #fafafa;
+  background: #efefef;
   box-shadow: 0px 10px 30px -12px rgba(0,0,0,1);
-  /*box-shadow: inset 0px 0px 50px -12px rgba(0,0,0,1);*/
   margin: 10px 30px 10px 10px !important;
   padding: 10px 0px 15px 0px !important;
 }
@@ -67,6 +55,10 @@ th {
   border-radius: 2px;
   margin: 2px 5px 2px 5px;
   padding: 2px 5px 2px 5px;
+}
+
+select.filter-input {
+  background-color:  #fafafa;
 }
 
 #spinner {
@@ -84,4 +76,13 @@ th {
   width: 100%;
   height: 100%;
   opacity: 0.5;
+}
+
+[v-cloak] {
+  display: none;
+}
+
+.btn-default .badge {
+  float: right;
+  /*background-color: #d9534f;*/
 }
